WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.7-dev, 2012-01-28


Version 0.3.7 (under dev!)
--------------------------

* core: move option "scroll_unread" from command /input to /window
* core: add support of flags in regular expressions and highlight options
* core: add library "pthread" in cmake file for link on OpenBSD
* core: use extended regex in filters (patch #7616)
* core: save current mouse state in option weechat.look.mouse (set option when
  mouse state is changed with command /mouse)
* core: add type "hashtable" for hdata
* core: add signal "buffer_line_added"
* core: add default keys "meta2-1;5D" and "meta2-1;5C" (ctrl+left/right) for
  gnome-terminal
* core: add option "hooks" for command /debug
* core: add option "weechat.look.scroll_bottom_after_switch" (if enabled,
  restore old behaviour before fix of bug #25555 in version 0.3.5)
* core: apply filters after full reload of configuration files (with /reload)
  (bug #31182)
* core: allow list for option weechat.plugin.extension (makes weechat.conf
  portable accross Un*x and Windows) (task #11479)
* core: fix compilation under OpenBSD 5.0 (lib utf8 not needed any more)
  (bug #34727)
* core: add new option weechat.completion.base_word_until_cursor: allow
  completion in middle of words (enabled by default) (task #9771)
* core: add option "jump_last_buffer_displayed" for command /input
  (key: alt+"/") (task #11553)
* core: display error in command /buffer if arguments are wrong (bug #34180)
* core: add developer's guide (task #5416)
* core: add option weechat.history.max_buffer_lines_minutes: maximum number of
  minutes in history per buffer (task #10900), rename option
  weechat.history.max_lines to weechat.history.max_buffer_lines_number
* core: fix help on plugin option when config_set_desc_plugin is called to set
  help on newly created option
* core: add WEECHAT_HOME option in cmake and configure to setup default